Cron 1.1.0

	* Added a controller and templates for viewing and searching for executed cron passes.

Cron 1.0.0

	* Initial version
	-- Charlie Powell <charlie@eval.bz>  Tue, 25 Sep 2012 22:58:09 +0000
